# genesis-world

./: .gitignore  BUILD_AUDIT.md  CONFIG_INVENTORY.md  CONTRIBUTING.md  Cargo.toml  DEMO_FLOW.md  DEMO_SCRIPT.md  DEPLOYMENT_MATRIX.md  DEPLOY_CHECKLIST.md  ENV_SETUP.md  KNOWN_ISSUES.md  MOLTBOOK.md  OPERATIONS_RUNBOOK.md  README.md  REPO_STATUS.md  RUNBOOK.md  SECURITY.md  SMOKE_TESTS.md  SYSTEM_MAP.md  SYSTEM_OVERVIEW_ONE_PAGER.md  TECHNICAL_ARCHITECTURE.md  WHAT_THIS_IS.md  genesis.json  seed-template.yaml  vie-deploy.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  moltbook.yml
agents/: Cargo.toml
agents/src/: dna.rs  economics.rs  evolution.rs  identity.rs  lib.rs  reputation.rs
ai-mesh/: Cargo.toml
ai-mesh/src/: agent_registry.rs  governance_ai.rs  lib.rs  mcp.rs  rag_engine.rs
civic/: Cargo.toml
civic/src/: debate.rs  hierarchy.rs  lib.rs  precedent.rs  reputation.rs  threads.rs
contracts-evm/: .env.example  .gitignore  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts-evm/contracts/: AgentIdentityNFT.sol  PatronVault.sol
contracts-evm/contracts/tokens/: GSPCore.sol  GSPOrigin.sol  RailToken.sol
contracts-evm/deployments/polygon/: README.md  all.json  nft.json  opensea.json
contracts-evm/scripts/deploy/: 01_deploy_tokens.ts  02_deploy_vault.ts  03_deploy_all.ts  04_deploy_nft.ts  06_clear_and_deploy.ts  12_deploy_nft_mint.ts  13_verify_all.ts  14_opensea_register.ts
contracts-evm/scripts/vie/: generate_metadata.ts  upload_to_ipfs.ts
contracts-evm/test/: AgentIdentityNFT.test.ts  GSPCore.test.ts  PatronVault.test.ts  RailToken.test.ts
demo/: Cargo.toml
demo/src/: main.rs
docs/: investor-demo-script.md  litepaper.md  seed-deck.md
drunks-app/: package-lock.json  package.json
drunks-app/public/: _redirects  report.json  robots.txt  sitemap.xml
drunks-app/src/app/: globals.css  layout.tsx  page.tsx
drunks-app/src/app/agent/[id]/: AgentDetail.tsx  page.tsx
drunks-app/src/app/arena/: page.tsx
drunks-app/src/app/civic/: page.tsx
drunks-app/src/app/fund/: layout.tsx  page.tsx
drunks-app/src/app/leaderboard/: page.tsx
drunks-app/src/app/nexus/: NexusView.tsx  page.tsx
drunks-app/src/app/nft-gallery/: page.tsx
drunks-app/src/app/press/: page.tsx
drunks-app/src/app/protocol/: page.tsx
drunks-app/src/app/vault/: page.tsx
drunks-app/src/components/: AgentCard.tsx  AgentDNA.tsx  CivicFeed.tsx  EpochTimer.tsx  Footer.tsx  JsonLd.tsx  LeaderboardTable.tsx  LiveStats.tsx  NavBar.tsx  ParticleField.tsx  Web3Provider.tsx
drunks-app/src/lib/: agent-dna.ts  data.ts  types.ts
drunks-app/src/lib/contracts/: addresses.ts  agent-nft-abi.ts  index.ts  patron-vault-abi.ts
genesis-compiler/: Cargo.toml
genesis-compiler/src/: main.rs
gsp-api/: package-lock.json  package.json  wrangler.toml
gsp-api/src/: worker.ts
kernel/: Cargo.toml
kernel/src/: consensus.rs  entropy.rs  lib.rs  realm_allocator.rs  types.rs
moltbook-swarm/: .env.example  package-lock.json  package.json  tsconfig.json
moltbook-swarm/src/: agents.ts  anchor-onchain.ts  civilization.ts  client.ts  cognitive.ts  content.ts  dialogue.ts  epoch-anchor.ts  evolution.ts  index.ts  ledger.ts  reactive.ts  reputation.ts  tools.ts  types.ts  utils.ts
moltbook/epochs/: epoch_20260303_073100.json  epoch_20260303_125746.json  epoch_20260304_010130.json  epoch_20260304_063251.json  epoch_20260305_063553.json  epoch_20260305_123309.json  epoch_20260306_010811.json  epoch_20260306_122859.json  epoch_20260306_182848.json  epoch_20260307_181737.json  epoch_20260308_181811.json  epoch_20260309_123316.json  epoch_20260310_005848.json  epoch_20260310_183348.json  epoch_20260311_063720.json  epoch_20260311_123251.json  epoch_20260311_183846.json  epoch_20260312_123158.json  epoch_20260312_183728.json  epoch_20260313_123120.json  epoch_20260314_063222.json  epoch_20260314_182144.json  epoch_20260315_011213.json  epoch_20260316_011248.json
moltbook/growth/: growth-log.md
moltbook/proofs/: proof-registry.md
moltbook/threads/: 001-genesis-boot-sequence.md  002-first-governance-proposal.md  003-patron-protocol-activation.md  004-cross-rail-entropy-report.md  005-knowledge-graph-init.md  006-trade-route-optimization.md  007-constitutional-review.md  008-epoch-recap-20260303_125746.md  009-epoch-recap-20260303_183256.md  010-epoch-recap-20260304_010130.md  011-epoch-recap-20260304_063251.md  012-epoch-recap-20260304_123000.md  013-epoch-recap-20260304_183153.md  014-epoch-recap-20260305_010341.md  015-epoch-recap-20260305_063553.md  016-epoch-recap-20260305_123309.md  017-epoch-recap-20260305_190549.md  018-epoch-recap-20260306_010811.md  019-epoch-recap-20260306_063348.md  020-epoch-recap-20260306_122859.md  021-epoch-recap-20260306_182848.md  022-epoch-recap-20260307_005948.md  023-epoch-recap-20260307_062439.md  024-epoch-recap-20260307_122224.md  025-epoch-recap-20260307_181737.md  026-epoch-recap-20260308_010406.md  027-epoch-recap-20260308_062911.md  028-epoch-recap-20260308_122313.md  029-epoch-recap-20260308_181811.md  030-epoch-recap-20260309_010419.md  031-epoch-recap-20260309_064628.md  032-epoch-recap-20260309_123316.md  033-epoch-recap-20260309_183604.md  034-epoch-recap-20260310_005848.md  035-epoch-recap-20260310_063438.md  036-epoch-recap-20260310_123315.md  037-epoch-recap-20260310_183348.md  038-epoch-recap-20260311_010003.md  039-epoch-recap-20260311_063720.md  040-epoch-recap-20260311_123251.md  (+18 more)
narrative-engine/: Cargo.toml
narrative-engine/src/: lib.rs
patron/: Cargo.toml
patron/src/: lib.rs
realms/: Cargo.toml
realms/src/: lib.rs
subnets/: Cargo.toml
subnets/src/: lib.rs
tokenomics/: Cargo.toml
tokenomics/src/: emission.rs  lib.rs  tokens.rs  treasury.rs
validator/: Cargo.toml
validator/src/: ai_copilot.rs  lib.rs  staking.rs
