[workspace]
resolver = "2"
members = [
    "kernel",
    "ai-mesh",
    "agents",
    "tokenomics",
    "genesis-compiler",
    "narrative-engine",
    "validator",
    "subnets",
    "realms",
    "civic",
    "patron",
    "demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Genesis Sentience Protocol Contributors"]
description = "A sovereign AI-native Layer-0 civilization engine"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
blake3 = "1.5"
merkle-cbt = "0.3"
