[package]
name = "gsp-ai-mesh"
version.workspace = true
edition.workspace = true
description = "AI Governance Mesh — MCP agents, RAG engine, governance AI"

[dependencies]
gsp-kernel = { path = "../kernel" }
gsp-agents = { path = "../agents" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
