[package]
name = "gsp-civic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GSP-CIVIC — Moltbook Protocol: communication, hierarchy, debate graphs, precedent index, civilizational memory"

[dependencies]
gsp-kernel = { path = "../kernel" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
uuid.workspace = true
