[package]
name = "gsp-genesis-compiler"
version = "0.1.0"
edition = "2021"
description = "Genesis Compiler — trinity-genesis CLI"

[[bin]]
name = "trinity-genesis"
path = "src/main.rs"

[dependencies]
gsp-kernel = { path = "../kernel" }
gsp-agents = { path = "../agents" }
gsp-ai-mesh = { path = "../ai-mesh" }
gsp-tokenomics = { path = "../tokenomics" }
gsp-validator = { path = "../validator" }
gsp-subnets = { path = "../subnets" }
gsp-realms = { path = "../realms" }
gsp-narrative = { path = "../narrative-engine" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
rand_chacha.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
