[package]
name = "gsp-kernel"
version.workspace = true
edition.workspace = true
description = "Trinity Mesh Kernel — hybridized consensus from Cosmos/Polkadot/Avalanche"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
