[package]
name = "gsp-narrative"
version.workspace = true
edition.workspace = true
description = "Data Storytelling Engine — causal graphs, narrative compilation, proof-anchored stories"

[dependencies]
gsp-kernel = { path = "../kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
