[package]
name = "gsp-patron"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Patron Protocol — agent sponsorship, vaults, performance scoring, and reward distribution"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
anyhow.workspace = true
